--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,14 @@ body,
 html {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  height: 100%;
+  /* font-family: sans-serif; */
+}
+
+#root {
+  height: 100%;
+  display: flex;
+  flex: auto;
 }
 
 h1,
