--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,13 @@
 @import '~antd/dist/antd.css';
 body,
-html {
+html,
+#root {
   margin: 0;
   padding: 0;
-  height: 100%;
-  /* font-family: sans-serif; */
+  min-height: 100%;
 }
-
 #root {
-  height: 100%;
   display: flex;
-  flex: auto;
 }
 
 h1,
